lucao come meu butao

--- a/comeco.html
+++ b/comeco.html
@@ -76,7 +76,7 @@ h1 {
 }
 
 .botao:hover {
-    transform: scale(1.12);
+    transform: scale(1.02);
     background-color: rgba(255, 255, 255, 0.35);
 }
 
@@ -92,6 +92,7 @@ h1 {
         <div class="conteudo">
             <h1>THE GAME AWARDS</h1>
             <a href="menu_votos.html" class="botao">Vote aqui</a>
+            <a href="cadastro.html" class="botao">Cadastre-se</a>
         </div>
     </section>
 
