--- a/performance.html
+++ b/performance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo do Ano</title>
+    <title>Performance</title>
 
     <style>
         body {
@@ -100,7 +100,7 @@
 <body>
 
     <div class="container">
-        <h1>Jogo do Ano</h1>
+        <h1>Melhor Performance</h1>
 
         <form action="menu_votos.html" method="GET">
             <div class="opcoes">
@@ -163,3 +163,4 @@
 
 </body>
 </html>
+
