--- a/narrativa.html
+++ b/narrativa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo do Ano</title>
+    <title>Narrativa</title>
 
     <style>
         body {
@@ -146,3 +146,4 @@
 
 </body>
 </html>
+
